--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "webpack-cli": "^3.1.2"
   },
   "peerDependencies": {
-    "react": "16.x"
+    "react": ">= 16.3.0 < 17"
   },
   "husky": {
     "hooks": {
