--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "A/B Testing library for React projects",
   "main": "dist/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
+    "coverage": "rimraf ./coverage && jest --coverage && open coverage/lcov-report/index.html",
     "build-dev": "NODE_ENV=development webpack",
     "build-prod": "NODE_ENV=production webpack",
     "build": "npm run build-prod && npm run build-dev",
@@ -17,20 +18,28 @@
     "@babel/core": "^7.1.2",
     "@babel/preset-env": "^7.1.0",
     "@babel/preset-react": "^7.0.0",
+    "babel-core": "^7.0.0-bridge.0",
     "babel-eslint": "^10.0.1",
+    "babel-jest": "^23.6.0",
     "babel-loader": "^8.0.4",
+    "enzyme": "^3.7.0",
+    "enzyme-adapter-react-16": "^1.7.0",
     "eslint": "^5.7.0",
     "eslint-plugin-react": "^7.11.1",
     "husky": "^1.1.2",
+    "jest": "^23.6.0",
     "lint-staged": "^7.3.0",
     "prettier": "1.14.3",
     "prop-types": "^15.6.2",
-    "react": "^16.5.2",
+    "react": "^16.6.3",
+    "react-dom": "^16.6.3",
+    "rimraf": "^2.6.2",
     "webpack": "^4.22.0",
     "webpack-cli": "^3.1.2"
   },
   "peerDependencies": {
-    "react": ">= 16.3.0 < 17"
+    "react": ">= 16.3.0 < 17",
+    "react-dom": ">= 16.3.0 < 17"
   },
   "husky": {
     "hooks": {
