--- a/.eslintrc
+++ b/.eslintrc
@@ -10,6 +10,11 @@
     "node": true,
     "es6": true
   },
+  "settings": {
+    "react": {
+      "version": "16.3"
+    }
+  },
   "parserOptions": {
     "ecmaVersion": 2018,
     "sourceType": "module"
