--- a/package.json
+++ b/package.json
@@ -10,18 +10,20 @@
     "experiments",
     "multivariate"
   ],
-  "main": "dist/index.js",
+  "main": "index.js",
   "files": [
-    "/dist"
+    "TestContainer",
+    "withTest",
+    "cjs",
+    "umd"
   ],
   "scripts": {
     "build-modules": "npm install",
-    "test": "jest",
-    "coverage": "rimraf ./coverage && jest --coverage && open coverage/lcov-report/index.html",
-    "coverage-only": "rimraf ./coverage && jest --coverage",
-    "build-dev": "NODE_ENV=development webpack",
-    "build-prod": "NODE_ENV=production webpack",
-    "build": "npm run build-prod && npm run build-dev",
+    "test": "TEST=true jest",
+    "coverage": "rimraf ./coverage && TEST=true jest --coverage && open coverage/lcov-report/index.html",
+    "coverage-only": "TEST=true rimraf ./coverage && TEST=true jest --coverage",
+    "build": "rollup -c",
+    "inspect-bundle": "INSPECT_BUNDLE=true npm run build-prod",
     "format": "prettier --trailing-comma es5 --single-quote --write 'src/**/*.js'",
     "lint": "echo Linting code... && eslint ."
   },
@@ -31,32 +33,35 @@
   "bugs": "https://github.com/ipetez/react-splitz/issues",
   "repository": "github:ipetez/react-splitz",
   "devDependencies": {
-    "@babel/core": "^7.1.2",
-    "@babel/preset-env": "^7.1.0",
-    "@babel/preset-react": "^7.0.0",
+    "@babel/core": "^7.9.0",
+    "@babel/preset-env": "^7.9.0",
+    "@babel/preset-react": "^7.9.4",
+    "@rollup/plugin-commonjs": "^11.0.2",
+    "@rollup/plugin-node-resolve": "^7.1.1",
+    "@rollup/plugin-replace": "^2.3.1",
     "babel-core": "^7.0.0-bridge.0",
-    "babel-eslint": "^10.0.1",
-    "babel-jest": "^23.6.0",
-    "babel-loader": "^8.0.4",
-    "enzyme": "^3.7.0",
-    "enzyme-adapter-react-16": "^1.7.0",
-    "eslint": "^5.7.0",
-    "eslint-plugin-react": "^7.11.1",
-    "husky": "^1.1.2",
-    "jest": "^23.6.0",
+    "babel-eslint": "^10.1.0",
+    "babel-jest": "^25.2.6",
+    "babel-loader": "^8.1.0",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.2",
+    "eslint": "^5.16.0",
+    "eslint-plugin-react": "^7.19.0",
+    "husky": "^1.3.1",
+    "jest": "^25.2.6",
     "lint-staged": "^7.3.0",
     "pre-push": "^0.1.1",
     "prettier": "1.14.3",
-    "prop-types": "^15.6.2",
-    "react": "^16.6.3",
-    "react-dom": "^16.6.3",
-    "rimraf": "^2.6.2",
-    "webpack": "^4.22.0",
-    "webpack-cli": "^3.1.2"
+    "prop-types": "^15.7.2",
+    "rimraf": "^2.7.1",
+    "rollup": "^2.3.2",
+    "rollup-plugin-babel": "^4.4.0",
+    "rollup-plugin-terser": "^5.3.0",
+    "rollup-plugin-visualizer": "^3.3.2"
   },
   "peerDependencies": {
-    "react": ">= 16.3.0 < 17",
-    "react-dom": ">= 16.3.0 < 17"
+    "react": ">= 16.8.0 < 17",
+    "react-dom": ">= 16.8.0 < 17"
   },
   "husky": {
     "hooks": {
@@ -75,6 +80,8 @@
     "coverage-only"
   ],
   "dependencies": {
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
     "seed-random": "^2.2.0"
   }
 }
