--- a/package.json
+++ b/package.json
@@ -80,6 +80,8 @@
     "coverage-only"
   ],
   "dependencies": {
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
     "seed-random": "^2.2.0"
   }
 }
